[project]
name = "itsg"
version = "0.0.1"
description = ""
authors = [
    {name = "Caroline Mimeault", email = "carolinemimeault@gmail.com"},
    {name = "Mike Williamson", email = "mike@korora.ca"},
]
dependencies = []
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
